--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,13 +3,19 @@ nav:
     - Home: index.md
     - Getting started checklist: getting_started_checklist.md
     - First-time walkthrough: onboarding_analysts.md
-    - Study definition API: study_definition.md
+    - Study definitions:
+        - Study definition walkthrough: study_definition.md
+        - Full API: study_definition_api.md
+    - Project pipelines: project_pipelines.md
     - Codelists:
         - Creating codelists: codelist_creation.md
         - SNOMED codelists: snomed.md
-    - The Datalab Open Manifesto: open_data_manifesto.md
+        - The Datalab Open Manifesto: open_data_manifesto.md
+    - Installing Docker: installing_docker.md
 
 theme: material
 plugins:
     - search
-    - mkdocstrings
+    - mkdocstrings:
+        docstring_options:
+            show_source: False
