restructuring of documentation, adding measures

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,24 +7,40 @@ nav:
         - The Datalab Open Manifesto: open_data_manifesto.md
     - Overview:
         - Workflow Overview: overview_pipeline.md
-        - Minimal Requirements: min_req.md
         - Datasets: dataset_landing_page.md
+    - Technical Set Up:
+        - Minimal Requirements: min_req.md
+        - Github and Git: git.md
+        - Installing Python: python.md
+        - Installing Docker: installing_docker.md
+        - Installing cohortextractor: cohortextractor.md
+    - Git Workflow:
+          - Using Git Effectively: git_workflow.md
+          - Code Reviews: code_reviews.md
     - Setting up your Project:
-        - Developing a Research Question and Protocol: protocol.md
-        - Creating your Project Repo on Github: project_setup.md
+        - Developing a Protocol: protocol.md
+        - Making a Project: project_setup.md
+        - Project Folder Structure: folder.md
     - Codelists:
         - Introduction to Codelists: codelist_intro.md
         - Building a Codelist: codelist_creation.md
-    - Getting started checklist: getting_started_checklist.md
-    - First-time walkthrough: onboarding_analysts.md
-    - Study definitions:
-        - Study definition walkthrough: study_definition.md
-        - Full API: study_definition_api.md
-    - Project pipelines: project_pipelines.md
-    - Codelists:
-        - Creating codelists: codelist_creation.md
+        - Adding Codelists to Project: codelist_project.md
         - SNOMED codelists: snomed.md
-    - Installing Docker: installing_docker.md
+    - Study definitions:
+        - Introduction to Study Definitions: study_def_intro.md
+        - Basic Set Up: study_definition.md
+        - Running Locally: running_local.md
+        - Defining Time Periods: time_periods.md
+        - Defining Variable Outputs: types_of_return_values.md
+        - Types of Variables Available: study_variables.md
+        - Defining a Precise Study Population: study_pop.md
+        - Combining Codelists: study_codelists.md
+        - Multiple Study Definitions: multiple_study_pop.md
+    - Measures: measures.md
+    - Project pipelines: project_pipelines.md
+    - Running on Server: server.md
+    - First-time walkthrough: onboarding_analysts.md
+
 
 theme: material
 plugins:
