--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ certifi==2020.6.20        # via matplotlib, requests
 chardet==3.0.4            # via requests
 click==7.1.2              # via mkdocs, nltk
 cycler==0.10.0            # via matplotlib
+decorator==4.4.2          # via networkx
 future==0.18.2            # via lunr
 idna==2.10                # via requests
+importlib-metadata==3.1.0  # via markdown
 jinja2==2.11.2            # via mkdocs
 joblib==0.17.0            # via nltk
 kiwisolver==1.2.0         # via matplotlib
@@ -23,20 +25,24 @@ mkdocs-material-extensions==1.0.1  # via mkdocs-material
 mkdocs-material==6.1.0    # via -r requirements.in, mkdocs-material-extensions
 mkdocs==1.1.2             # via -r requirements.in, mkdocs-material, mkdocstrings
 mkdocstrings==0.13.6      # via -r requirements.in
+networkx==2.5             # via opensafely-jobrunner
 nltk==3.5                 # via lunr
 numpy==1.19.2             # via matplotlib, pandas, scipy, seaborn
-opensafely-cohort-extractor==1.5.2  # via -r requirements.in
+opensafely-cohort-extractor==1.11.0  # via -r requirements.in
+opensafely-jobrunner==1.11.0  # via opensafely-cohort-extractor
 pandas==1.1.3             # via opensafely-cohort-extractor, seaborn
+pebble==4.5.3             # via opensafely-jobrunner
 pillow==8.0.0             # via matplotlib
+prettytable==2.0.0        # via opensafely-cohort-extractor
 pygments==2.7.1           # via mkdocs-material
 pymdown-extensions==8.0.1  # via mkdocs-material, mkdocstrings
 pyparsing==2.4.7          # via matplotlib
 python-dateutil==2.8.1    # via matplotlib, pandas
 pytkdocs==0.9.0           # via mkdocstrings
 pytz==2020.1              # via pandas
-pyyaml==5.3.1             # via mkdocs, opensafely-cohort-extractor
+pyyaml==5.3.1             # via mkdocs, opensafely-cohort-extractor, opensafely-jobrunner
 regex==2020.10.15         # via nltk
-requests==2.24.0          # via opensafely-cohort-extractor
+requests==2.24.0          # via opensafely-cohort-extractor, opensafely-jobrunner
 scipy==1.5.3              # via seaborn
 seaborn==0.11.0           # via opensafely-cohort-extractor
 six==1.15.0               # via livereload, lunr, python-dateutil
@@ -47,3 +53,8 @@ tinynetrc==1.3.0          # via opensafely-cohort-extractor
 tornado==6.0.4            # via livereload, mkdocs
 tqdm==4.50.2              # via nltk
 urllib3==1.25.11          # via requests
+wcwidth==0.2.5            # via prettytable
+zipp==3.4.0               # via importlib-metadata
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
