add dataset pages to mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,10 +10,12 @@ nav:
     - Data sources: 
         - Overview: dataset-landing-page.md
         - SystmOne primary care database: dataset-systmone.md
+        - Covid-19 testing dataset: dataset-sgsscovid.md
         - Emergency Care Data Set: dataset-ecds.md
         - Admitted Patient Care dataset:  dataset-apc.md
-        - 
+        - Intensive Care dataset: dataset-icnarc.md
         - Covid-19 Patient Notification System: dataset-cpns.md
+        - Registered Deaths dataset: dataset-onsdeaths.md
     - Getting started:
         - Overview: getting-started.md
         - GitHub and Git: install-github-and-git.md
