--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,11 +2,10 @@ site_name: OpenSAFELY documentation
 nav:
     - Introduction: index.md
     - How OpenSAFELY works: 
+        - Our philosophy: open-methods.md
         - Not just another TRE: coming-soon.md
         - Security: workflow-security-levels.md
-    - Updating the Documentation: updating-documentation.md
-    - Our Philosophy:
-        - Open Working Methods: open-methods.md
+        - Updating the Documentation: updating-documentation.md
     - Data sources: 
         - Overview: dataset-landing-page.md
         - Primary Care Records: dataset-systmone.md
@@ -16,7 +15,7 @@ nav:
         - Intensive Care Admissions (covid-19 only): dataset-icnarc.md
         - In-hospital Deaths (covid-19 only): dataset-cpns.md
         - Registered Deaths: dataset-onsdeaths.md
-    - Getting started:
+    - Installation:
         - Overview: getting-started.md
         - GitHub and Git: install-github-and-git.md
         - Python: install-python.md
