--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,7 +44,7 @@ nav:
         - Adding packages: requests-packages.md
         - Adding Study Definition variables: requests-variables.md
         - Updating the Documentation: requests-documentation.md
-    - Code of conduct: code-of-conduct.md
+#    - Code of conduct: code-of-conduct.md
 
 theme: material
 
