--- a/requirements.txt
+++ b/requirements.txt
@@ -4,54 +4,133 @@
 #
 #    pip-compile
 #
-beautifulsoup4==4.9.3     # via mkdocstrings
-certifi==2020.6.20        # via matplotlib, requests
-chardet==3.0.4            # via requests
-click==7.1.2              # via mkdocs, nltk
-cycler==0.10.0            # via matplotlib
-future==0.18.2            # via lunr
-idna==2.10                # via requests
-jinja2==2.11.2            # via mkdocs
-joblib==0.17.0            # via nltk
-kiwisolver==1.2.0         # via matplotlib
-livereload==2.6.3         # via mkdocs
-lunr[languages]==0.5.8    # via mkdocs
-markdown==3.3.2           # via mkdocs, mkdocs-material, pymdown-extensions
-markupsafe==1.1.1         # via jinja2
-matplotlib==3.3.2         # via seaborn
-mkdocs-material-extensions==1.0.1  # via mkdocs-material
-mkdocs-material==6.1.0    # via -r requirements.in, mkdocs-material-extensions
-mkdocs==1.1.2             # via -r requirements.in, mkdocs-material, mkdocstrings
-mkdocstrings==0.13.6      # via -r requirements.in
-nltk==3.5                 # via lunr
-numpy==1.19.2             # via matplotlib, pandas, scipy, seaborn
-opensafely-cohort-extractor==1.14.0  # via -r requirements.in
-opensafely-jobrunner==2.1.6  # via opensafely-cohort-extractor
-pandas==1.1.3             # via opensafely-cohort-extractor, seaborn
-pillow==8.0.0             # via matplotlib
-prettytable==2.0.0        # via opensafely-cohort-extractor
-pygments==2.7.1           # via mkdocs-material
-pymdown-extensions==8.0.1  # via mkdocs-material, mkdocstrings
-pyparsing==2.4.7          # via matplotlib
-python-dateutil==2.8.1    # via matplotlib, pandas
-pytkdocs==0.9.0           # via mkdocstrings
-pytz==2020.1              # via pandas
-pyyaml==5.3.1             # via mkdocs, opensafely-cohort-extractor
-regex==2020.10.15         # via nltk
-requests==2.24.0          # via opensafely-cohort-extractor, opensafely-jobrunner
-ruamel.yaml.clib==0.2.2   # via ruamel.yaml
-ruamel.yaml==0.16.12      # via opensafely-jobrunner
-scipy==1.5.3              # via seaborn
-seaborn==0.11.0           # via opensafely-cohort-extractor
-six==1.15.0               # via livereload, lunr, python-dateutil
-soupsieve==2.0.1          # via beautifulsoup4
-sqlalchemy==1.3.20        # via opensafely-cohort-extractor
-sqlparse==0.4.1           # via opensafely-cohort-extractor
-tinynetrc==1.3.0          # via opensafely-cohort-extractor
-tornado==6.0.4            # via livereload, mkdocs
-tqdm==4.50.2              # via nltk
-urllib3==1.25.11          # via requests
-wcwidth==0.2.5            # via prettytable
+beautifulsoup4==4.9.3
+    # via mkdocstrings
+certifi==2020.6.20
+    # via
+    #   matplotlib
+    #   requests
+chardet==3.0.4
+    # via requests
+click==7.1.2
+    # via
+    #   mkdocs
+    #   nltk
+cycler==0.10.0
+    # via matplotlib
+future==0.18.2
+    # via lunr
+idna==2.10
+    # via requests
+jinja2==2.11.2
+    # via mkdocs
+joblib==0.17.0
+    # via nltk
+kiwisolver==1.2.0
+    # via matplotlib
+livereload==2.6.3
+    # via mkdocs
+lunr[languages]==0.5.8
+    # via mkdocs
+markdown==3.3.2
+    # via
+    #   mkdocs
+    #   mkdocs-material
+    #   pymdown-extensions
+markupsafe==1.1.1
+    # via jinja2
+matplotlib==3.3.2
+    # via seaborn
+mkdocs-material-extensions==1.0.1
+    # via mkdocs-material
+mkdocs-material==6.1.0
+    # via
+    #   -r requirements.in
+    #   mkdocs-material-extensions
+mkdocs==1.1.2
+    # via
+    #   -r requirements.in
+    #   mkdocs-material
+    #   mkdocstrings
+mkdocstrings==0.13.6
+    # via -r requirements.in
+nltk==3.5
+    # via lunr
+numpy==1.19.2
+    # via
+    #   matplotlib
+    #   pandas
+    #   scipy
+    #   seaborn
+opensafely-cohort-extractor==1.14.0
+    # via -r requirements.in
+opensafely-jobrunner==2.1.6
+    # via opensafely-cohort-extractor
+pandas==1.1.3
+    # via
+    #   opensafely-cohort-extractor
+    #   seaborn
+pillow==8.0.0
+    # via matplotlib
+prettytable==2.0.0
+    # via opensafely-cohort-extractor
+pygments==2.7.1
+    # via mkdocs-material
+pymdown-extensions==8.0.1
+    # via
+    #   mkdocs-material
+    #   mkdocstrings
+pyparsing==2.4.7
+    # via matplotlib
+python-dateutil==2.8.1
+    # via
+    #   matplotlib
+    #   pandas
+pytkdocs==0.9.0
+    # via mkdocstrings
+pytz==2020.1
+    # via pandas
+pyyaml==5.3.1
+    # via
+    #   mkdocs
+    #   opensafely-cohort-extractor
+regex==2020.10.15
+    # via nltk
+requests==2.24.0
+    # via
+    #   opensafely-cohort-extractor
+    #   opensafely-jobrunner
+ruamel.yaml.clib==0.2.2
+    # via ruamel.yaml
+ruamel.yaml==0.16.12
+    # via opensafely-jobrunner
+scipy==1.5.3
+    # via seaborn
+seaborn==0.11.0
+    # via opensafely-cohort-extractor
+six==1.15.0
+    # via
+    #   livereload
+    #   lunr
+    #   python-dateutil
+soupsieve==2.0.1
+    # via beautifulsoup4
+sqlalchemy==1.3.20
+    # via opensafely-cohort-extractor
+sqlparse==0.4.1
+    # via opensafely-cohort-extractor
+tinynetrc==1.3.0
+    # via opensafely-cohort-extractor
+tornado==6.0.4
+    # via
+    #   livereload
+    #   mkdocs
+tqdm==4.50.2
+    # via nltk
+urllib3==1.25.11
+    # via requests
+wcwidth==0.2.5
+    # via prettytable
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
