--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,3 +18,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CONFIG_FILE: mkdocs.yml
+          EXTRA_PACKAGES: build-base
