--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ certifi==2020.6.20
     # via
     #   matplotlib
     #   requests
+cffi==1.14.5
+    # via cryptography
 chardet==3.0.4
     # via requests
 click==7.1.2
@@ -17,8 +19,13 @@ click==7.1.2
     #   mkdocs
     #   nltk
     #   pip-tools
+    #   presto-python-client
+cryptography==3.4.4
+    # via pyopenssl
 cycler==0.10.0
     # via matplotlib
+decorator==4.4.2
+    # via retry
 future==0.18.2
     # via lunr
 idna==2.10
@@ -63,7 +70,7 @@ numpy==1.19.2
     #   pandas
     #   scipy
     #   seaborn
-opensafely-cohort-extractor==1.19.2
+opensafely-cohort-extractor==1.21.1
     # via -r requirements.in
 opensafely-jobrunner==2.1.6
     # via opensafely-cohort-extractor
@@ -75,14 +82,22 @@ pillow==8.0.0
     # via matplotlib
 pip-tools==5.5.0
     # via -r requirements.in
+presto-python-client==0.7.0
+    # via opensafely-cohort-extractor
 prettytable==2.0.0
     # via opensafely-cohort-extractor
+py==1.10.0
+    # via retry
+pycparser==2.20
+    # via cffi
 pygments==2.7.1
     # via mkdocs-material
 pymdown-extensions==8.0.1
     # via
     #   mkdocs-material
     #   mkdocstrings
+pyopenssl==20.0.1
+    # via requests-pkcs12
 pyparsing==2.4.7
     # via matplotlib
 python-dateutil==2.8.1
@@ -99,10 +114,16 @@ pyyaml==5.3.1
     #   opensafely-cohort-extractor
 regex==2020.10.15
     # via nltk
+requests-pkcs12==1.9
+    # via opensafely-cohort-extractor
 requests==2.24.0
     # via
     #   opensafely-cohort-extractor
     #   opensafely-jobrunner
+    #   presto-python-client
+    #   requests-pkcs12
+retry==0.9.2
+    # via opensafely-cohort-extractor
 ruamel.yaml.clib==0.2.2
     # via ruamel.yaml
 ruamel.yaml==0.16.12
@@ -113,8 +134,11 @@ seaborn==0.11.0
     # via opensafely-cohort-extractor
 six==1.15.0
     # via
+    #   cycler
     #   livereload
     #   lunr
+    #   presto-python-client
+    #   pyopenssl
     #   python-dateutil
 soupsieve==2.0.1
     # via beautifulsoup4
@@ -123,6 +147,8 @@ sqlalchemy==1.3.20
 sqlparse==0.4.1
     # via opensafely-cohort-extractor
 structlog==20.2.0
+    # via opensafely-cohort-extractor
+tabulate==0.8.7
     # via opensafely-cohort-extractor
 tinynetrc==1.3.0
     # via opensafely-cohort-extractor
