--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,49 +3,56 @@ nav:
     - Introduction: index.md
     - How OpenSAFELY works:
         - Our philosophy: open-methods.md
-        - Not just another TRE: coming-soon.md
         - Security: security-levels.md
         - Analysis workflow: workflow.md
-    - Data sources:
-        - Overview: dataset-intro.md
-        - Primary care records: dataset-systmone.md
-        - Covid-19 test results: dataset-sgsscovid.md
-        - Emergency attendances: dataset-ecds.md
-        - Hospital admissions:  dataset-apc.md
-        - Intensive care admissions (covid-19 only): dataset-icnarc.md
-        - In-hospital deaths (covid-19 only): dataset-cpns.md
-        - Registered deaths: dataset-onsdeaths.md
+
     - Installation:
+
         - Overview: install-intro.md
         - GitHub and Git: install-github-and-git.md
         - Python: install-python.md
         - Docker: install-docker.md
         - OpenSAFELY CLI: opensafely-cli.md
         - macOS: install-macos.md
-    - Project repositories: repositories.md
-    - Study definitions: study-def.md
-    - Study definition variable reference: study-def-variables.md
-    - cohortextractor: cohortextractor.md
-    - Inclusion/exclusion flow charts: study-def-flowcharts.md
-    - Measures: measures.md
-    - Codelists:
-        - Introduction to codelists: codelist-intro.md
-        - Building a codelist: codelist-creation.md
-        - Adding codelists to Project: codelist-project.md
-        - SNOMED codelists: codelist-snomed.md
-    - Running and testing code: pipelines.md
-    - Releasing files from the server: releasing-files.md
-    - Good Practice:
-        - Good practice: good-practice-intro.md
-        - The Datalab Open Manifesto: open-data-manifesto.md
-        - Developing a protocol: protocol.md
-        - Using Git effectively: git-workflow.md
-        - Code reviews: code-reviews.md
-    - Feature requests, bug reports:
-        - Overview: requests-intro.md
-        - Adding packages: requests-packages.md
-        - Adding Study Definition variables: requests-variables.md
+    - Reference:
+        - Github repository layout: repositories.md
+        - Study definitions:
+            - Overview: study-def.md
+            - Variable reference: study-def-variables.md
+            - Measures: measures.md
+        - Codelists:
+            - Introduction to codelists: codelist-intro.md
+            - Building a codelist: codelist-creation.md
+            - Adding codelists to Project: codelist-project.md
+            - SNOMED codelists: codelist-snomed.md
+        - Actions:
+            - Running actions in a pipeline: pipelines.md
+            - The `cohortextractor` action: cohortextractor.md
+        - Data sources:
+            - Overview: dataset-intro.md
+            - Systmone primary care: dataset-systmone.md
+            - EMIS primary care: dataset-emis.md
+            - Covid-19 test results: dataset-sgsscovid.md
+            - Emergency attendances: dataset-ecds.md
+            - Hospital admissions:  dataset-apc.md
+            - Intensive care admissions (covid-19 only): dataset-icnarc.md
+            - In-hospital deaths (covid-19 only): dataset-cpns.md
+            - Registered deaths: dataset-onsdeaths.md
+    - How-to guides:
+        - Inclusion/exclusion flow charts: study-def-flowcharts.md
+        - Releasing files from the server: releasing-files.md
+        - Good Practice:
+            - Good practice: good-practice-intro.md
+            - The Datalab Open Manifesto: open-data-manifesto.md
+            - Developing a protocol: protocol.md
+            - Using Git effectively: git-workflow.md
+            - Code reviews: code-reviews.md
+
         - Updating the Documentation: requests-documentation.md
+    - Support:
+        - Overview: requests-intro.md
+        - Requesting new libraries: requests-packages.md
+        - Requesting Study Definition variables: requests-variables.md
 
 theme: material
 
